# claude-work

./: .dockerignore  .env.example  .gitignore  .mcp.json  .npmignore  .textlintignore  CLAUDE.md  Dockerfile  GEMINI.md  PM2_MONITORING.md  README.md  browser-test.ts  docker-compose.docker-env.yml  docker-compose.override.yml.example  docker-compose.yml  drizzle.config.ts  ecosystem.config.js  eslint-local-rules.js  eslint.config.mjs  next.config.js  package-lock.json  package.json  package.json.backup  playwright.config.ts  pnpm-lock.yaml  post-merge-review-findings.md  prisma.config.ts  review-findings.md  server.ts  stryker.config.json  tsconfig.json  tsconfig.server.json  verification-report.md  vitest.config.stryker.ts  vitest.config.ts  vitest.config.worktree.ts  vitest.global-setup.ts
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  verify_import.py
backend/alembic/: env.py
backend/alembic/versions/: 28ac58be91df_initial_migration.py  a1b2c3d4e5f6_add_prompt_history_table.py  a887ef8b3d7f_add_run_scripts_table.py  a8e30604d8b2_add_model_selection_fields.py
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/api/: auth.py  git_ops.py  projects.py  prompt_history.py  run_scripts.py  sessions.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  auth_session.py  base.py  message.py  project.py  prompt_history.py  run_script.py  (+1 more)
backend/tests/: conftest.py  test_app_startup.py  test_config.py  test_health.py  test_logging.py  test_models.py  test_terminal_ws.py  test_websocket.py
(+1608 files in other folders)
